crates/forge_repo/src/provider_client/snapshots/forge_repo__provider_client__openai__tests__fetch_models_http_error_status.snap
---
source: crates/forge_repo/src/provider_client/openai.rs
expression: "normalize_ports(format!(\"{:#?}\", actual.unwrap_err()))"
---
Error {
    context: "Failed to fetch the models",
    source: Error {
        context: "401 GET http://127.0.0.1:<port>/models",
        source: "{\"error\":{\"code\":401,\"message\":\"Invalid API key\"}}",
    },
}
